--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "Ts concepts brushup",
   "main": "index.js",
   "scripts": {
-    "start": "tsc "
+    "start": "tsc",
+    "server":"lite-server"
   },
   "author": "suresh",
   "license": "ISC",
   "dependencies": {
     "typescript": "^4.6.2"
+  },
+  "devDependencies": {
+    "lite-server": "^2.6.1"
   }
 }
